--- a/EXC8JY_OOP_HF/EXC8JY_OOP_HF.csproj
+++ b/EXC8JY_OOP_HF/EXC8JY_OOP_HF.csproj
@@ -46,6 +46,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContractFinished.cs" />
+    <Compile Include="finished_contracts.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="finished_contracts.Designer.cs">
+      <DependentUpon>finished_contracts.cs</DependentUpon>
+    </Compile>
     <Compile Include="form_index.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,6 +79,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Contract.cs" />
+    <EmbeddedResource Include="finished_contracts.resx">
+      <DependentUpon>finished_contracts.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="form_index.resx">
       <DependentUpon>form_index.cs</DependentUpon>
     </EmbeddedResource>
