--- a/EXC8JY_OOP_HF/EXC8JY_OOP_HF.csproj
+++ b/EXC8JY_OOP_HF/EXC8JY_OOP_HF.csproj
@@ -47,12 +47,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ContractFinished.cs" />
-    <Compile Include="finished_contracts.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="finished_contracts.Designer.cs">
-      <DependentUpon>finished_contracts.cs</DependentUpon>
-    </Compile>
     <Compile Include="form_index.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -80,9 +74,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Contract.cs" />
-    <EmbeddedResource Include="finished_contracts.resx">
-      <DependentUpon>finished_contracts.cs</DependentUpon>
-    </EmbeddedResource>
+    <Compile Include="User.cs" />
     <EmbeddedResource Include="form_index.resx">
       <DependentUpon>form_index.cs</DependentUpon>
     </EmbeddedResource>
